# bevy_worldswap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
examples/: game_regions.rs  headless_hello_world.rs  hello_world.rs  pause_game.rs  play_or_pause.rs
src/: app.rs  lib.rs  plugins.rs  render_worker.rs  run_conditions.rs  subapp.rs  window_utils.rs  wip.rs
tests/test/: mod.rs
