[package]
name = "bevy_worldswap"
description = "Swap Bevy Worlds at runtime"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.2"
edition = "2021"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_worldswap"

[workspace]
resolver = "2"
exclude = [
    "examples",
    "assets"
]

[lib]
path = "src/lib.rs"
doctest = false
test = false

[[test]]
name = "tests"
path = "tests/test/mod.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy           = { version = "0.14.0-dev", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_winit"] }
crossbeam      = { version = "0.8" }
tracing        = { version = "0.1.27" }

[patch.crates-io]
bevy = { git = "https://github.com/UkoeHB/bevy", rev = "2e251a67b" }

[dev-dependencies]
bevy               = { version = "0.14.0-dev", default-features = true }
thiserror          = { version = "1.0" }
tracing-subscriber = { version = "0.3" }
